tests/ui/coercion/coerce-reborrow-multi-arg-fail.stderr
error[E0308]: mismatched types
  --> $DIR/coerce-reborrow-multi-arg-fail.rs:4:18
   |
LL |     test(&mut 7, &7);
   |     ---- ------  ^^ types differ in mutability
   |     |    |
   |     |    expected all arguments to be this `&mut {integer}` type because they need to match the type of this parameter
   |     arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut {integer}`
                      found reference `&{integer}`
note: function defined here
  --> $DIR/coerce-reborrow-multi-arg-fail.rs:1:4
   |
LL | fn test<T>(_a: T, _b: T) {}
   |    ^^^^ -  -----  ----- this parameter needs to match the `&mut {integer}` type of `_a`
   |         |  |
   |         |  `_b` needs to match the `&mut {integer}` type of this parameter
   |         `_a` and `_b` both reference this parameter `T`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
